--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Mechanical Engineer
+  uni: Northeastern
+  year: June, 1996 &mdash; June, 2000
   # awards:
   # summary:
